# mjdiscord

./: .gitignore  Cargo.toml  Dockerfile  docker-compose.yml  package-lock.json  package.json  pterodactyl-startup.sh  test.js  tsconfig.json
audio/: anime-wow.opus  chill.opus  cracked.opus  depressed.opus  fuckedup.opus  getgood.opus  gotem.opus  hellno.opus  hotdog.opus  mando.opus  momhoe.opus  myman.opus  noway.opus  nut.opus  shiton.opus  stg.opus  turtle.opus  vegetables.opus  whackfuck.opus  wife.opus  wtf-long.opus  wtf-short.opus  wtfwt.opus  yeet.opus  yeet2.opus  yeeyee.opus
config/: default.example.json  default.json.example  settings.yaml  soundfile.json
src/: main.rs  main.ts  mjbot.ts  renamer.ts  test.ts  test2.ts
src/command/: abstract_command.ts  beer.ts  chuck.ts  dad.ts  discord_command.ts  gif_command.ts  giphy_command.ts  help.ts  help_command.ts  magiceightball_command.ts  middlefinger.ts  movie.ts  random_class.ts  random_comic.ts  react.ts  remind.ts  tableflip.ts  team.ts  test.ts  vote.ts
src/commands/: abstract_command.ts  commands.ts  dad_command.ts  eggplant.ts  gif_command.ts  middlefinger_command.ts  mod.rs  randomcomic_command.ts  tableflip_command.ts  team_command.ts  test_command.ts  vote_command.ts  welcome_command.ts
src/lib/: abstract_client.ts  guild_types.ts  music_types.ts  radarr.ts  radarr_types.ts  rss_watcher.ts  song.ts
src/services/: abstract_service.ts  binanceus.ts  browser.ts  chart.ts  inventoryalert.ts  music.ts
src/util/: alerts.ts  coinmarketcap.ts  command.ts  command_args.ts  data.ts  fantasyproparser.ts  (+8 more)
(+53 files in other folders)
